// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPopup calls onLocationChanged and fetches locations on input change 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="location-svg"
            fill="none"
            height="23px"
            stroke="currentColor"
            stroke-width="0"
            width="23px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF dolVI"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationEntry-sc-olnqa1-4 escqfF bIcPBX"
            >
              <span
                class="CombinedStyling__Span-sc-c3jdxk-1 kSRMWv"
              >
                New York
              </span>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationEntry-sc-olnqa1-4 escqfF bIcPBX"
            >
              <span
                class="CombinedStyling__Span-sc-c3jdxk-1 kSRMWv"
              >
                San Francisco
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="location-svg"
          fill="none"
          height="23px"
          stroke="currentColor"
          stroke-width="0"
          width="23px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF dolVI"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationEntry-sc-olnqa1-4 escqfF bIcPBX"
          >
            <span
              class="CombinedStyling__Span-sc-c3jdxk-1 kSRMWv"
            >
              New York
            </span>
          </div>
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationEntry-sc-olnqa1-4 escqfF bIcPBX"
          >
            <span
              class="CombinedStyling__Span-sc-c3jdxk-1 kSRMWv"
            >
              San Francisco
            </span>
          </div>
        </div>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup clears location when clear icon is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
          value="Somewhere"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="circle-x"
            fill="currentColor"
            height="16px"
            stroke="none"
            style="cursor: pointer;"
            width="16px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
        value="Somewhere"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="circle-x"
          fill="currentColor"
          height="16px"
          stroke="none"
          style="cursor: pointer;"
          width="16px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup closes popup on Escape key 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="location-svg"
            fill="none"
            height="23px"
            stroke="currentColor"
            stroke-width="0"
            width="23px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="location-svg"
          fill="none"
          height="23px"
          stroke="currentColor"
          stroke-width="0"
          width="23px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup opens popup on input click and closes on outside click 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="location-svg"
            fill="none"
            height="23px"
            stroke="currentColor"
            stroke-width="0"
            width="23px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="location-svg"
          fill="none"
          height="23px"
          stroke="currentColor"
          stroke-width="0"
          width="23px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup renders input and location icon by default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="location-svg"
            fill="none"
            height="23px"
            stroke="currentColor"
            stroke-width="0"
            width="23px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="location-svg"
          fill="none"
          height="23px"
          stroke="currentColor"
          stroke-width="0"
          width="23px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup selects a location from the popup 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="location-svg"
            fill="none"
            height="23px"
            stroke="currentColor"
            stroke-width="0"
            width="23px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="location-svg"
          fill="none"
          height="23px"
          stroke="currentColor"
          stroke-width="0"
          width="23px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`LocationPopup shows clear icon when locationText is present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
      >
        <input
          aria-label="Add Location"
          aria-placeholder="Add Location"
          class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
          name="locationInput"
          placeholder="Add Location"
          spellcheck="true"
          type="text"
          value="Somewhere"
        />
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
        >
          <svg
            data-testid="circle-x"
            fill="currentColor"
            height="16px"
            stroke="none"
            style="cursor: pointer;"
            width="16px"
          />
        </div>
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
          data-testid="location-popup-container"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
          />
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="LocationPopup__Label-sc-olnqa1-1 cQEJWA"
    >
      <input
        aria-label="Add Location"
        aria-placeholder="Add Location"
        class="LocationPopup__Input-sc-olnqa1-2 kRiKrI"
        name="locationInput"
        placeholder="Add Location"
        spellcheck="true"
        type="text"
        value="Somewhere"
      />
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__SVGContainer-sc-olnqa1-0 escqfF dZZCcr"
      >
        <svg
          data-testid="circle-x"
          fill="currentColor"
          height="16px"
          stroke="none"
          style="cursor: pointer;"
          width="16px"
        />
      </div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 LocationPopup__LocationPopupContainer-sc-olnqa1-3 escqfF joIhSd"
        data-testid="location-popup-container"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 escqfF ckFvxY leZDxE"
        />
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
